Modernize the search tree for JDK 25
This code was already written to a current style, so the yield is small on
purpose.

The decode path in OvmsEmbeddingProvider was the one real win. It copied the
entire tensor with ByteString.toByteArray, then pulled one float at a time. It
now reads via asReadOnlyByteBuffer, which avoids a copy for the
LiteralByteString a gRPC parse produces, and populates each vector with a single
bulk asFloatBuffer().get. That path runs on each indexed chunk.

SentenceRules.countTokens built an ArrayList of spans and dropped it, once per
sentence across a document; it counts in place now. OpenNlpSentenceRules called
codePointAt an extra time per code point.

The remainder is sequenced-collection accessors at 7 sites, plus
Arrays.stream(...).boxed().toList() replacing 2 manual double[] boxing loops.

One comment corrected instead: TeiEmbeddingProvider justified the manual
fork-join because StructuredTaskScope is preview in 21. That remains true in 25
under JEP 505, so the workaround remains and the comment now names the version
it applies to.